k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-service
  namespace: production
  labels:
    app: app-service
    environment: production
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-service
  template:
    metadata:
      labels:
        app: app-service
        environment: production
    spec:
      containers:
      - name: app
        image: nikitathakre10/app-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: production
  labels:
    app: app-service
    environment: production
spec:
  selector:
    app: app-service
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
